Improve ImageJ patching failure hints
Now that more people are using OpenJDK 17, 21, or even 23, and OpenJDK
17+ breaks bytecode patching unless an --add-opens argument is given,
we should give a hint about that to reduce people's suffering.